--- a/index.html
+++ b/index.html
@@ -54,38 +54,72 @@
           Solicited nuestros servicios
         </button>
       </section>
-      <section class="cointainer__service">
-        <ul class="list__service">
-          <li class="item__service">
-            <h3 class="title__service">ATENCIÓN A LOS DETALLES</h3>
-            <p class="text__service">
-              Nos adentramos en todos los detalles y procesos de su negocio,
-              para así desarrollar una solución a su medida.
-            </p>
-          </li>
-          <li class="item__service">
-            <h3 class="title__service">PUNTUALIDAD</h3>
-            <p class="text__service">
-              Con nosotros, usted puede sentirse seguro y protegido. Un
-              principio importante de la empresa: respetar su tiempo y respetar
-              los plazos acordados.
-            </p>
-          </li>
-          <li class="item__service">
-            <h3 class="title__service">PLANIFICACIÓN</h3>
-            <p class="text__service">
-              Usted podrá observar y participar en cada fase del desarrollo y
-              aplicación de soluciones.
-            </p>
-          </li>
-          <li class="item__service">
-            <h3 class="title__service">TECNOLOGIA MODERNA</h3>
-            <p class="text__service">
-              Usamos herramientas innovadoras para resolver las tareas
-              asignadas. Es hora de simplificar los procesos laborales.
-            </p>
-          </li>
-        </ul>
+      <section class="service">
+        <div class="cointainer__service">
+          <ul class="images__service">
+            <li class="card__service">
+              <svg class="icon__service" width="70px">
+                <use
+                  href="./images/icons/symbol-defs__service.svg#icon-antena"
+                ></use>
+              </svg>
+            </li>
+            <li class="card__service">
+              <svg class="icon__service" width="70px">
+                <use
+                  href="./images/icons/symbol-defs__service.svg#icon-reloj"
+                ></use>
+              </svg>
+            </li>
+            <li class="card__service">
+              <svg class="icon__service" width="70px">
+                <use
+                  href="./images/icons/symbol-defs__service.svg#icon-diagrama"
+                ></use>
+              </svg>
+            </li>
+            <li class="card__service">
+              <svg class="icon__service" width="70px">
+                <use
+                  href="./images/icons/symbol-defs__service.svg#icon-astronauta"
+                ></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+        <div class="cointainer__service">
+          <ul class="list__service">
+            <li class="item__service">
+              <h3 class="title__service">ATENCIÓN A LOS DETALLES</h3>
+              <p class="text__service">
+                Nos adentramos en todos los detalles y procesos de su negocio,
+                para así desarrollar una solución a su medida.
+              </p>
+            </li>
+            <li class="item__service">
+              <h3 class="title__service">PUNTUALIDAD</h3>
+              <p class="text__service">
+                Con nosotros, usted puede sentirse seguro y protegido. Un
+                principio importante de la empresa: respetar su tiempo y
+                respetar los plazos acordados.
+              </p>
+            </li>
+            <li class="item__service">
+              <h3 class="title__service">PLANIFICACIÓN</h3>
+              <p class="text__service">
+                Usted podrá observar y participar en cada fase del desarrollo y
+                aplicación de soluciones.
+              </p>
+            </li>
+            <li class="item__service">
+              <h3 class="title__service">TECNOLOGIA MODERNA</h3>
+              <p class="text__service">
+                Usamos herramientas innovadoras para resolver las tareas
+                asignadas. Es hora de simplificar los procesos laborales.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="cointainer__images">
         <h2 class="title__images">A qué nos dedicamos</h2>
@@ -116,165 +150,219 @@
           </li>
         </ul>
       </section>
-      <section class="cointainer__equipment">
-        <h2 class="title__equipment">Nuestro equipo</h2>
-        <ul class="list__equipment">
-          <li class="card__equipment">
-            <img
-              src="images/team1.jpg"
-              alt="Andres Cubo"
-              width="270"
-              height="260"
-            />
-            <h3 class="name__equipment">Andrés Cubo</h3>
-            <p class="job__equipment">Diseñador de Productos</p>
-            <ul class="icon__list">
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-instagram"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-facebook"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-linkedin"
-                  ></use>
-                </svg>
-              </li>
-            </ul>
-          </li>
-          <li class="card__equipment">
-            <img
-              src="images/team3.jpg"
-              alt="Carla Palacio"
-              width="270"
-              height="260"
-            />
-            <h3 class="name__equipment">Carla Palacio</h3>
-            <p class="job__equipment">Desarrolladora Frontend</p>
-            <ul class="icon__list">
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-instagram"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-facebook"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-linkedin"
-                  ></use>
-                </svg>
-              </li>
-            </ul>
-          </li>
-          <li class="card__equipment">
-            <img
-              src="images/team2.jpg"
-              alt="Mario Dorado"
-              width="270"
-              height="260"
-            />
-            <h3 class="name__equipment">Mario Dorado</h3>
-            <p class="job__equipment">Marketing</p>
-            <ul class="icon__list">
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-instagram"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-facebook"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-linkedin"
-                  ></use>
-                </svg>
-              </li>
-            </ul>
-          </li>
-          <li class="card__equipment">
-            <img
-              src="images/team4.jpg"
-              alt="Pablo Mijangos"
-              width="270"
-              height="260"
-            />
-            <h3 class="name__equipment">Pablo Mijangos</h3>
-            <p class="job__equipment">Diseñador IU</p>
-            <ul class="icon__list">
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-instagram"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-facebook"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icon__item">
-                <svg class="icon" width="20px">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-linkedin"
-                  ></use>
-                </svg>
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <section class="equipment">
+        <div class="cointainer__equipment">
+          <h2 class="title__equipment">Nuestro equipo</h2>
+          <ul class="list__equipment">
+            <li class="card__equipment">
+              <img
+                src="images/team1.jpg"
+                alt="Andres Cubo"
+                width="270"
+                height="260"
+              />
+              <h3 class="name__equipment">Andrés Cubo</h3>
+              <p class="job__equipment">Diseñador de Productos</p>
+              <ul class="icon__list">
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+            </li>
+            <li class="card__equipment">
+              <img
+                src="images/team3.jpg"
+                alt="Carla Palacio"
+                width="270"
+                height="260"
+              />
+              <h3 class="name__equipment">Carla Palacio</h3>
+              <p class="job__equipment">Desarrolladora Frontend</p>
+              <ul class="icon__list">
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+            </li>
+            <li class="card__equipment">
+              <img
+                src="images/team2.jpg"
+                alt="Mario Dorado"
+                width="270"
+                height="260"
+              />
+              <h3 class="name__equipment">Mario Dorado</h3>
+              <p class="job__equipment">Marketing</p>
+              <ul class="icon__list">
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+            </li>
+            <li class="card__equipment">
+              <img
+                src="images/team4.jpg"
+                alt="Pablo Mijangos"
+                width="270"
+                height="260"
+              />
+              <h3 class="name__equipment">Pablo Mijangos</h3>
+              <p class="job__equipment">Diseñador IU</p>
+              <ul class="icon__list">
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icon__item">
+                  <svg class="icon" width="20px">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="cointainer__customer">
         <h2 class="title__customer">Clientes regulares</h2>
+        <ul class="list__customer">
+          <li class="item__customer">
+            <svg class="icon__customer">
+              <use
+                href="./images/icons/symbol-defs__customer.svg#icon-Logo1"
+              ></use>
+            </svg>
+          </li>
+          <li class="item__customer">
+            <svg class="icon__customer">
+              <use
+                href="./images/icons/symbol-defs__customer.svg#icon-Logo2"
+              ></use>
+            </svg>
+          </li>
+          <li class="item__customer">
+            <svg class="icon__customer">
+              <use
+                href="./images/icons/symbol-defs__customer.svg#icon-Logo3"
+              ></use>
+            </svg>
+          </li>
+          <li class="item__customer">
+            <svg class="icon__customer">
+              <use
+                href="./images/icons/symbol-defs__customer.svg#icon-Logo4"
+              ></use>
+            </svg>
+          </li>
+          <li class="item__customer">
+            <svg class="icon__customer">
+              <use
+                href="./images/icons/symbol-defs__customer.svg#icon-Logo5"
+              ></use>
+            </svg>
+          </li>
+          <li class="item__customer">
+            <svg class="icon__customer">
+              <use
+                href="./images/icons/symbol-defs__customer.svg#icon-Logo6"
+              ></use>
+            </svg>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
