--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="webstudio__icon" href="#">WebStudio</a>
           <ul class="navigation__list">
             <li>
-              <a class="navigation__link focus_select" href="index.html"
+              <a class="navigation__link focus_select current" href="index.html"
                 >Estudio</a
               >
             </li>
@@ -165,28 +165,28 @@
               <p class="job__equipment">Diseñador de Productos</p>
               <ul class="icon__list">
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-instagram"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-twitter"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-facebook"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-linkedin"
                     ></use>
@@ -205,28 +205,28 @@
               <p class="job__equipment">Desarrolladora Frontend</p>
               <ul class="icon__list">
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-instagram"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-twitter"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-facebook"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-linkedin"
                     ></use>
@@ -245,28 +245,28 @@
               <p class="job__equipment">Marketing</p>
               <ul class="icon__list">
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-instagram"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-twitter"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-facebook"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-linkedin"
                     ></use>
@@ -285,28 +285,28 @@
               <p class="job__equipment">Diseñador IU</p>
               <ul class="icon__list">
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-instagram"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-twitter"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-facebook"
                     ></use>
                   </svg>
                 </li>
                 <li class="icon__item">
-                  <svg class="icon" width="20px">
+                  <svg class="icon">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-linkedin"
                     ></use>
@@ -323,42 +323,42 @@
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-Logo1"
+                href="./images/icons/symbol-defs__customer.svg#icon-grupo1"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-Logo2"
+                href="./images/icons/symbol-defs__customer.svg#icon-grupo2"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-Logo3"
+                href="./images/icons/symbol-defs__customer.svg#icon-grupo3"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-Logo4"
+                href="./images/icons/symbol-defs__customer.svg#icon-grupo4"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-Logo5"
+                href="./images/icons/symbol-defs__customer.svg#icon-grupo5"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-Logo6"
+                href="./images/icons/symbol-defs__customer.svg#icon-grupo6"
               ></use>
             </svg>
           </li>
@@ -366,36 +366,72 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="cointainer__footer">
-        <nav class="contact__footer">
-          <ul class="list__icon__footer">
-            <li>
-              <a class="webstudio__icon__footer" href="#">WebStudio</a>
-            </li>
-          </ul>
-          <address>
-            <ul class="list__footer">
-              <li class="contact__footer_map">
-                <a
-                  class="localization__map"
-                  href="https://www.google.com/maps/place/Ticoman,+07340+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.5100605,-99.1345336,16.29z/data=!4m6!3m5!1s0x85d1f9c5ca11dd3f:0x93b99b1b7359a46c!8m2!3d19.5109705!4d-99.1323577!16s%2Fg%2F1vwlpgv_?entry=ttu"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
-                >
-              </li>
-              <li class="text__footer">
-                <a class="contact__footer" href="mailto:info@example.com"
-                  >Info@example.com</a
-                >
-              </li>
-              <li class="text__footer">
-                <a class="contact__footer" href="#">+52 55 5529 6000 </a>
+      <section class="cointainer__footerbox">
+        <div class="cointainer__footer">
+          <nav class="contact__footer">
+            <ul class="list__icon__footer">
+              <li>
+                <a class="webstudio__icon__footer" href="#">WebStudio</a>
               </li>
             </ul>
-          </address>
-        </nav>
-      </div>
+            <address>
+              <ul class="list__footer">
+                <li class="contact__footer_map">
+                  <a
+                    class="localization__map"
+                    href="https://www.google.com/maps/place/Ticoman,+07340+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.5100605,-99.1345336,16.29z/data=!4m6!3m5!1s0x85d1f9c5ca11dd3f:0x93b99b1b7359a46c!8m2!3d19.5109705!4d-99.1323577!16s%2Fg%2F1vwlpgv_?entry=ttu"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
+                  >
+                </li>
+                <li class="text__footer">
+                  <a class="contact__footer" href="mailto:info@example.com"
+                    >Info@example.com</a
+                  >
+                </li>
+                <li class="text__footer">
+                  <a class="contact__footer" href="#">+52 55 5529 6000 </a>
+                </li>
+              </ul>
+            </address>
+          </nav>
+        </div>
+        <div class="social__footer">
+          <h4 class="text__socialfooter">ENCUENTRANOS EN</h4>
+          <ul class="iconfooter__list">
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+          </ul>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
