--- a/portafolio.html
+++ b/portafolio.html
@@ -20,7 +20,7 @@
           <ul class="navigation__list">
             <li><a class="navigation__link" href="index.html">Estudio</a></li>
             <li>
-              <a class="navigation__link focus_select" href="portafolio.html"
+              <a class="navigation__link focus_select current" href="portafolio.html"
                 >Portafolio</a
               >
             </li>
@@ -159,36 +159,72 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="cointainer__footer">
-        <nav class="contact__footer">
-          <ul class="list__icon__footer">
-            <li>
-              <a class="webstudio__icon__footer" href="#">WebStudio</a>
-            </li>
-          </ul>
-          <address>
-            <ul class="list__footer">
-              <li class="contact__footer_map">
-                <a
-                  class="localization__map"
-                  href="https://www.google.com/maps/place/Ticoman,+07340+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.5100605,-99.1345336,16.29z/data=!4m6!3m5!1s0x85d1f9c5ca11dd3f:0x93b99b1b7359a46c!8m2!3d19.5109705!4d-99.1323577!16s%2Fg%2F1vwlpgv_?entry=ttu"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
-                >
-              </li>
-              <li class="text__footer">
-                <a class="contact__footer" href="mailto:info@example.com"
-                  >Info@example.com</a
-                >
-              </li>
-              <li class="text__footer">
-                <a class="contact__footer" href="#">+52 55 5529 6000 </a>
+      <section class="cointainer__footerbox">
+        <div class="cointainer__footer">
+          <nav class="contact__footer">
+            <ul class="list__icon__footer">
+              <li>
+                <a class="webstudio__icon__footer" href="#">WebStudio</a>
               </li>
             </ul>
-          </address>
-        </nav>
-      </div>
+            <address>
+              <ul class="list__footer">
+                <li class="contact__footer_map">
+                  <a
+                    class="localization__map"
+                    href="https://www.google.com/maps/place/Ticoman,+07340+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.5100605,-99.1345336,16.29z/data=!4m6!3m5!1s0x85d1f9c5ca11dd3f:0x93b99b1b7359a46c!8m2!3d19.5109705!4d-99.1323577!16s%2Fg%2F1vwlpgv_?entry=ttu"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
+                  >
+                </li>
+                <li class="text__footer">
+                  <a class="contact__footer" href="mailto:info@example.com"
+                    >Info@example.com</a
+                  >
+                </li>
+                <li class="text__footer">
+                  <a class="contact__footer" href="#">+52 55 5529 6000 </a>
+                </li>
+              </ul>
+            </address>
+          </nav>
+        </div>
+        <div class="social__footer">
+          <h3 class="text__socialfooter">ENCUENTRANOS EN</h3>
+          <ul class="iconfooter__list">
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="iconfooter__item">
+                  <svg class="icon">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+          </ul>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
