--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
             <li class="card__service">
               <svg class="icon__service" width="70px">
                 <use
-                  href="./images/icons/symbol-defs__service.svg#icon-antena"
+                  href="./images/icons/symbol-defs__service.svg#icon-antenna"
                 ></use>
               </svg>
             </li>
             <li class="card__service">
               <svg class="icon__service" width="70px">
                 <use
-                  href="./images/icons/symbol-defs__service.svg#icon-reloj"
+                  href="./images/icons/symbol-defs__service.svg#icon-clock"
                 ></use>
               </svg>
             </li>
             <li class="card__service">
               <svg class="icon__service" width="70px">
                 <use
-                  href="./images/icons/symbol-defs__service.svg#icon-diagrama"
+                  href="./images/icons/symbol-defs__service.svg#icon-diagram"
                 ></use>
               </svg>
             </li>
             <li class="card__service">
               <svg class="icon__service" width="70px">
                 <use
-                  href="./images/icons/symbol-defs__service.svg#icon-astronauta"
+                  href="./images/icons/symbol-defs__service.svg#icon-astronaut"
                 ></use>
               </svg>
             </li>
@@ -126,7 +126,7 @@
         <ul class="item__images">
           <li>
             <img
-              src="images/imagen1.jpg"
+              src="images/image1.jpg"
               alt="Tecnologia"
               width="373"
               height="323"
@@ -134,7 +134,7 @@
           </li>
           <li>
             <img
-              src="images/imagen2.jpg"
+              src="images/image2.jpg"
               alt="Tecnologia"
               width="373"
               height="323"
@@ -142,7 +142,7 @@
           </li>
           <li>
             <img
-              src="images/imagen3.jpg"
+              src="images/image3.jpg"
               alt="Tecnologia"
               width="373"
               height="323"
@@ -323,42 +323,42 @@
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-grupo1"
+                href="./images/icons/symbol-defs__customer.svg#icon-group1"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-grupo2"
+                href="./images/icons/symbol-defs__customer.svg#icon-group2"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-grupo3"
+                href="./images/icons/symbol-defs__customer.svg#icon-group3"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-grupo4"
+                href="./images/icons/symbol-defs__customer.svg#icon-group4"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-grupo5"
+                href="./images/icons/symbol-defs__customer.svg#icon-group5"
               ></use>
             </svg>
           </li>
           <li class="item__customer">
             <svg class="icon__customer">
               <use
-                href="./images/icons/symbol-defs__customer.svg#icon-grupo6"
+                href="./images/icons/symbol-defs__customer.svg#icon-group6"
               ></use>
             </svg>
           </li>
