--- a/portafolio.html
+++ b/portafolio.html
@@ -65,7 +65,7 @@
         <ul class="portafolio__list">
           <li class="portafolio__card">
             <img
-              src="images/portafolio.jpg"
+              src="images/briefcase.jpg"
               alt="Tecnoduck"
               width="370"
               height="294"
@@ -75,7 +75,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio1.jpg"
+              src="images/briefcase1.jpg"
               alt="Poster Baloncesto"
               width="370"
               height="294"
@@ -87,7 +87,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio2.jpg"
+              src="images/briefcase2.jpg"
               alt="Restaurante"
               width="370"
               height="294"
@@ -97,7 +97,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio3.jpg"
+              src="images/briefcase3.jpg"
               alt="Audifonos"
               width="370"
               height="294"
@@ -107,7 +107,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio4.jpg"
+              src="images/briefcase4.jpg"
               alt="Cajas"
               width="370"
               height="294"
@@ -117,7 +117,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio5.jpg"
+              src="images/briefcase5.jpg"
               alt="inspiración"
               width="370"
               height="294"
@@ -127,7 +127,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio6.jpg"
+              src="images/briefcase6.jpg"
               alt="Libro"
               width="370"
               height="294"
@@ -137,7 +137,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio7.jpg"
+              src="images/briefcase7.jpg"
               alt="Proyecto"
               width="370"
               height="294"
@@ -147,7 +147,7 @@
           </li>
           <li class="portafolio__card">
             <img
-              src="images/portafolio8.jpg"
+              src="images/briefcase8.jpg"
               alt="Negocio"
               width="370"
               height="294"
