--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
               width="373"
               height="323"
             />
+            <p class="text__images">APLICACIONES DE ESCRITORIO</p>
           </li>
           <li>
             <img
@@ -139,14 +140,15 @@
               width="373"
               height="323"
             />
+            <p class="text__images">APLICACIONES MÓVILES</p>
           </li>
           <li>
             <img
               src="images/image3.jpg"
               alt="Tecnologia"
-              width="373"
-              height="323"
+             
             />
+            <p class="text__images">SOLUCIONES DE DISEÑO</p>
           </li>
         </ul>
       </section>
