--- a/portafolio.html
+++ b/portafolio.html
@@ -61,7 +61,7 @@
             <button class="portafolio__content" type="button">Marketing</button>
           </li>
         </ul>
-
+        <section></section>
         <ul class="portafolio__list">
           <li class="portafolio__card">
             <img
